--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,21 +1,30 @@
-
 {% extends "base.html" %}
 {% block main %}
-  <form action="" method="post" name="import">
-                        {{ form.csrf_token }}
-                        <div>
-                            <p>Title:</p>
-                           {{ form.title() }}
-                            <p>Author:</p>
-                           {{ form.author() }}
-
-                            <p>Category:</p>
-                           {{ form.category() }}
-                            <p>Description:</p>
-                           {{ form.description() }}
-                        </div>
-                        <div>
-                           <button>Add</button>
-                        </div>
-                     </form>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div>
+   {{ message }}
+</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+<br/>
+<form action="" method="post" name="import">
+   {{ form.csrf_token }}
+   <div>
+      <p>Title:</p>
+      {{ form.title() }}
+      <p>Author:</p>
+      {{ form.author() }}
+      <p>Category:</p>
+      {{ form.category() }}
+      <p>Description:</p>
+      {{ form.description() }}
+   </div>
+   <div>
+      <button>Add</button>
+   </div>
+</form>
 {% endblock %}
+
