deploy, cleanup, mixins

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
             <a class="p-2 text-dark" href="/list">List books</a>
             <a class="p-2 text-dark" href="/import">Import Books</a>
             <a class="p-2 text-dark" href="/add">Add Book</a>
+            <a href="https://github.com/Kehashi91/books"><b>Github</b></a>
          </nav>
       </div>
       <div class="container">
